# AgentBay-Python-SDK

./: .gitignore  README.md  debug_spans.py  pyproject.toml
agentbay/: __init__.py  client.py  config.py  decorators.py  sessions.py  span.py  transport.py  utils.py
agentbay/frameworks/langchain/: __init__.py  callback.py
agentbay/llms/openai/: __init__.py  assistants.py  chat.py  embeddings.py
bay_frameworks/instrumentation/agentic_frameworks/ag2/: instrumentor.py
bay_frameworks/instrumentation/agentic_frameworks/agno/attributes/: agent.py
bay_frameworks/instrumentation/agentic_frameworks/crewai/: instrumentation.py
bay_frameworks/instrumentation/agentic_frameworks/openai_agents/attributes/: common.py
bay_frameworks/instrumentation/agentic_frameworks/xpander/: instrumentor.py
bay_frameworks/semconv/: __init__.py  span_kinds.py
tests/unit/: test_decorators.py  test_init.py  test_models.py  test_transport.py
tests/unit/frameworks/langchain/: test_callback.py
tests/unit/llms/openai/: test_chat.py
